# reactos

.github/workflows/: build.yml
boot/bootdata/: hivedef.inf  hivesft.inf
dll/directx/wine/d3d11/: device.c
dll/directx/wine/ddraw/: ddraw.c
dll/ntdll/: CMakeLists.txt
dll/ntdll/def/: ntdll.spec
dll/ntdll/ldr/: ldrinit.c  ldrutils.c
dll/ntdll/rtl/: uilist.c
dll/win32/: CMakeLists.txt
dll/win32/KernelBase/: CMakeLists.txt  DllMain.c
dll/win32/KernelBase/wine/: CMakeLists.txt  debug.c  file.c  hacks.h  kernelbase.h  kernelbase.spec  loader.c  locale.c  main.c  memory.c  process.c  security.c  sync.c  thread.c
dll/win32/advapi32/: advapi32.spec
dll/win32/advapi32/service/: eventlog.c
dll/win32/kernel32/: CMakeLists.txt  kernel32.spec
dll/win32/msvcrt/: msvcrt.spec
dll/win32/ole32/: ole32.spec
dll/win32/powrprof/: powrprof.c  powrprof.spec
dll/win32/psapi/: CMakeLists.txt  main.c  psapi.c
dll/win32/shell32/: CMakeLists.txt  precomp.h  rgs_res.rc  shell32.cpp  shell32.spec  shresdef.h  stubs.cpp  utils.cpp
dll/win32/syssetup/: wizard.c
media/doc/: WINESYNC.txt
modules/: CMakeLists.txt
modules/wallpapers/: CMakeLists.txt
ntoskrnl/inbv/: bootanim.c  bootanim.rc
sdk/cmake/: CMakeMacros.cmake  baseaddress.cmake
sdk/include/ndk/: pstypes.h
sdk/include/psdk/: powrprof.h  shlguid.h  shobjidl.idl  winbase.h  winnls.h  winuser.h
sdk/include/xdk/: setypes.h
sdk/lib/rtl/: time.c
win32ss/user/ntuser/: desktop.c
win32ss/user/user32/: CMakeLists.txt  user32.spec
win32ss/user/user32_vista/: CMakeLists.txt  dpi.c
(+32 files in other folders)
